# verantyx-cli

./: .gitignore  ACTIVE_CURIOSITY_ARCHITECTURE.md  API_INTERCEPTION_GUIDE.md  AUTONOMOUS_LEARNING_COMPLETE.md  BACKGROUND_LEARNING_COMPLETE.md  CLAUDE_CHOICE_FIX.md  CLAUDE_NO_RESPONSE_DEBUG_SETUP.md  CLAUDE_WRAPPER_FIXES.md  COGNITIVE_DISCOMFORT_GUIDE.md  CONTINUOUS_LEARNING_README.md  CONTRIBUTING.md  CROSS_MULTI_PROCESSOR_ARCHITECTURE.md  CROSS_PERSISTENCE_FIX_SUMMARY.md  CROSS_SHAPE_MEMORY_DESIGN.md  CROSS_STRUCTURE_IMPLEMENTATION.md  DEBUGGING_CLAUDE_RESPONSE_ISSUE.md  DEBUGGING_GUIDE.md  DEVELOPMENTAL_LEARNING_SYSTEM.md  DYNAMIC_JCROSS_VIDEO_ANALYSIS.md  EMOTION_DNA_GUIDE.md  ENHANCED_VISION_DESIGN.md  ENTER_DETECTION_SUMMARY.md  ENTER_KEY_DETECTION_GUIDE.md  EXTENDED_OPERATIONS_IMPACT.md  GITHUB_UPLOAD_GUIDE.md  HIERARCHICAL_MULTI_AGENT.md  HISTORY_MONITOR_INTEGRATION.md  HONEST_IMPLEMENTATION_STATUS.md  HYBRID_MODE_GUIDE.md  IMAGE_CONVERSION_GUIDE.md  IMAGE_RECOGNITION_GUIDE.md  IMAGE_USAGE_TIPS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_2026-03-13.md  IMPLEMENTATION_SUMMARY.md  INPUT_FORWARDING_FIX.md  INPUT_PROMPT_TRIGGER_GUIDE.md  INTEGRATION_TEST_GUIDE.md  INTERACTIVE_TEST_GUIDE.md  INTERCEPT_MODE_GUIDE.md  (+89 more)
bootstrap/: jcross_bootstrap.py  jcross_japanese_parser.py  resonance_declarative.jcross  resonance_engine.jcross  resonance_simple.jcross  resonance_v2.jcross  test_bootstrap.jcross  test_debug.jcross  test_stage1_1.jcross  test_stage1_2.jcross  test_stage1_3.jcross  test_stage1_4.jcross  test_stage1_5.jcross  test_stage1_6.jcross  test_stage2_1.jcross  test_stage2_2.jcross  test_stage2_3.jcross
docs/: DECLARATIVE_INTERPRETER_PLAN.md  DECLARATIVE_JCROSS_SPEC.md  KOFDAI_RESONANCE_ARCHITECTURE.md  STAGE1_COMPLETE.md  STAGE2_COMPLETE.md  STAGE3_DECLARATIVE_PROGRESS.md  UNIFIED_KOFDAI_IMPLEMENTATION.md  宣言型JCROSS仕様.md
ios-schedule-app/: QUICKSTART.md  README.md  SETUP_GUIDE.md  TEST_CHECKLIST.md
ios-schedule-app/ScheduleApp/: AddScheduleView.swift  ContentView.swift  Schedule.swift  (+3 more)
jcross/: Neural行列演算エンジン.jcross  cross_space.jcross  cross_space_v2.jcross  declarative_core.jcross  spatial_transformation.jcross  test_declarative_simple.jcross  unified_kofdai_system.jcross  unified_kofdai_v2.jcross  完全統合_実行エンジン.jcross  完全統合_宣言型Kofdaiシステム.jcross  宣言型_空間変換.jcross  真の宣言型エンジン.jcross  簡易テスト.jcross
python-graph-app/: ADVANCED_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_ADVANCED.md  README.md  advanced_graph_app.py  graph_app.py  requirements.txt  sample_data.json  test_advanced_app.py
test_cross_structure.mlpackage/: Manifest.json
verantyx_cli/: __init__.py  __main__.py  cli_commands.py
(+322 files in other folders)
